--- a/packages/components/src/components/custom-select/custom-select.scss
+++ b/packages/components/src/components/custom-select/custom-select.scss
@@ -8,9 +8,7 @@
 @use "../../styles/dialog-init";
 
 .db-custom-select-placeholder {
-	position: absolute;
-	inset-block-start: 0;
-	inset-inline-start: 0;
+	@extend %select-absolute-placeholder;
 }
 
 .db-custom-select {
