--- a/packages/components/src/components/select/select.scss
+++ b/packages/components/src/components/select/select.scss
@@ -8,9 +8,7 @@
 @use "../../styles/internal/select-components";
 
 .db-select-placeholder {
-	position: absolute;
-	inset-block-start: 0;
-	inset-inline-start: 0;
+	@extend %select-absolute-placeholder;
 }
 
 .db-select {
