fix: issue with tooltip content

--- a/showcases/angular-showcase/src/app/components/tooltip/tooltip.component.html
+++ b/showcases/angular-showcase/src/app/components/tooltip/tooltip.component.html
@@ -18,7 +18,7 @@
 				[placement]="exampleProps?.placement"
 				[animation]="exampleProps?.animation"
 				[delay]="exampleProps?.delay"
-				>{{ exampleProps?.children }}</db-tooltip
+				>{{ exampleProps?.content }}</db-tooltip
 			>
 		</db-button>
 	</ng-template>
