refactor(custom select): enabling `hidden` attribute

--- a/packages/components/src/styles/internal/_form-components.scss
+++ b/packages/components/src/styles/internal/_form-components.scss
@@ -312,8 +312,10 @@ $input-valid-types:
 
 		// we use absolute icons
 		position: relative;
-		display: flex;
 		flex-direction: column;
+		&:not([hidden]) {
+			display: flex;
+		}
 	}
 
 	&[data-variant="floating"],
