--- a/packages/components/src/components/button/button.scss
+++ b/packages/components/src/components/button/button.scss
@@ -20,7 +20,7 @@
 	color: colors.$db-adaptive-on-bg-basic-emphasis-100-default;
 	min-block-size: variables.$db-sizing-md;
 	inline-size: fit-content;
-	padding: variables.$db-spacing-fixed-xs variables.$db-spacing-fixed-md;
+	padding: variables.$db-spacing-fixed-2xs variables.$db-spacing-fixed-md;
 	text-decoration: none;
 
 	// Square icon only buttons
