refactor: extracted display CSS property setting in a mixin

--- a/packages/components/src/styles/internal/_form-components.scss
+++ b/packages/components/src/styles/internal/_form-components.scss
@@ -61,7 +61,7 @@ $db-min-inline-size: var(
 		margin-block-start: variables.$db-spacing-fixed-2xs;
 
 		&:is([data-semantic="successful"], [data-semantic="critical"]) {
-			display: none;
+			@include display(none);
 		}
 	}
 }
@@ -160,17 +160,17 @@ $db-min-inline-size: var(
 	> .db-infotext {
 		@if $key == "valid" {
 			&[data-semantic="successful"] {
-				display: flex;
+				@include display(flex);
 			}
 			/* stylelint-disable-next-line at-rule-empty-line-before */
 		} @else {
 			&[data-semantic="critical"] {
-				display: flex;
+				@include display(flex);
 			}
 		}
 
 		&:not([data-semantic]) {
-			display: none;
+			@include display(none);
 		}
 	}
 }
@@ -314,9 +314,7 @@ $input-valid-types:
 		position: relative;
 		flex-direction: column;
 
-		&:not([hidden]) {
-			display: flex;
-		}
+		@include display(flex);
 	}
 
 	&[data-variant="floating"],
@@ -516,7 +514,8 @@ $input-valid-types:
 
 	&:is(label),
 	> label {
-		display: flex;
+		@include display(flex);
+
 		align-items: flex-start;
 		position: relative;
 		color: var(
