--- a/packages/components/src/components/header/header.scss
+++ b/packages/components/src/components/header/header.scss
@@ -7,7 +7,9 @@
 
 .db-header {
 	background-color: colors.$db-adaptive-bg-basic-level-1-default;
-	display: flex;
+
+	@include display(flex);
+
 	flex-direction: column;
 	position: relative;
 	min-block-size: component.$min-mobile-header-height;
@@ -34,7 +36,7 @@
 	}
 
 	.db-link {
-		display: inline-block;
+		@include display(inline-block);
 	}
 
 	&[data-on-forcing-mobile="true"] {
@@ -59,7 +61,7 @@
 			.db-header-meta-navigation:empty
 		):has(.db-header-secondary-action:empty) {
 		.db-header-burger-menu-container {
-			display: none;
+			@include display(none);
 		}
 	}
 
@@ -73,7 +75,8 @@
 }
 
 .db-header-navigation-bar {
-	display: flex;
+	@include display(flex);
+
 	position: relative;
 	padding: variables.$db-spacing-fixed-xs variables.$db-spacing-fixed-md;
 	inline-size: 100%;
@@ -87,7 +90,7 @@
 .db-header-meta-navigation {
 	@extend %db-density-functional;
 
-	display: flex;
+	@include display(flex);
 	flex-direction: column;
 	gap: variables.$db-spacing-fixed-sm;
 	justify-content: flex-end;
@@ -107,17 +110,18 @@
 		}
 
 		&:empty {
-			display: none;
+			@include display(none);
 		}
 	}
 
 	&:empty {
-		display: none;
+		@include display(none);
 	}
 }
 
 .db-header-navigation-container {
-	display: inherit;
+	@include display(inherit);
+
 	flex: 1 1 auto;
 	inline-size: 100%;
 	align-items: center;
@@ -139,12 +143,12 @@
 }
 
 .db-header-brand-container:not(:has(> :nth-child(1))) {
-	display: none;
+	@include display(none);
 }
 
 .db-header-action-container:has(> .db-header-secondary-action:empty) {
 	@include screen-sizes.screen("md") {
-		display: none;
+		@include display(none);
 	}
 }
 
@@ -172,7 +176,9 @@
 .db-header-action-container {
 	align-items: center;
 	block-size: 100%;
-	display: inherit;
+
+	@include display(inherit);
+
 	gap: inherit;
 	flex: 0 1 auto;
 	flex-grow: 0;
@@ -195,7 +201,8 @@
 }
 
 .db-header-drawer-navigation {
-	display: flex;
+	@include display(flex);
+
 	flex-direction: column;
 	flex: 1 1 auto;
 	block-size: 100%;
@@ -213,7 +220,8 @@
 
 .db-header-navigation,
 .db-header-secondary-action {
-	display: flex;
+	@include display(flex);
+
 	gap: variables.$db-spacing-fixed-sm;
 	padding-inline: variables.$db-spacing-fixed-md;
 
@@ -234,7 +242,8 @@
 	padding-block-end: 0;
 
 	.db-drawer-content {
-		display: flex;
+		@include display(flex);
+
 		flex-direction: column;
 		block-size: 100%;
 		overflow: hidden;
@@ -245,7 +254,7 @@
 .db-header-meta-navigation,
 .db-header-navigation-container > .db-header-navigation,
 .db-header-action-container > .db-header-secondary-action {
-	display: none;
+	@include display(none);
 
 	@include screen-sizes.screen("md") {
 		display: inherit;
