--- a/packages/components/src/components/accordion-item/accordion-item.scss
+++ b/packages/components/src/components/accordion-item/accordion-item.scss
@@ -49,7 +49,9 @@
 
 			background-color: colors.$db-adaptive-bg-basic-level-1-default;
 			list-style: none;
-			display: flex;
+
+			@include db-display(flex);
+
 			justify-content: space-between;
 			padding: variables.$db-spacing-fixed-md;
 			gap: variables.$db-spacing-fixed-md;
