refactor: replaced further CSS display property

--- a/packages/components/src/components/custom-select-form-field/custom-select-form-field.scss
+++ b/packages/components/src/components/custom-select-form-field/custom-select-form-field.scss
@@ -5,7 +5,9 @@
 .db-custom-select-form-field {
 	&:is(summary) {
 		list-style: none;
-		display: flex;
+
+		@include db-display(flex);
+
 		align-items: center;
 		justify-content: space-between;
 		gap: variables.$db-spacing-fixed-sm;
@@ -17,7 +19,8 @@
 		}
 
 		> div {
-			display: flex;
+			@include db-display(flex);
+
 			gap: variables.$db-spacing-fixed-sm;
 		}
 	}
