--- a/packages/components/src/components/brand/brand.scss
+++ b/packages/components/src/components/brand/brand.scss
@@ -4,8 +4,8 @@
 
 .db-brand {
 	@extend %db-overwrite-font-size-md;
+	@include db-display(flex);
 
-	display: flex;
 	gap: variables.$db-spacing-fixed-sm;
 	align-items: center;
 	font-weight: 700;
