--- a/packages/components/src/components/custom-select-list-item/custom-select-list-item.scss
+++ b/packages/components/src/components/custom-select-list-item/custom-select-list-item.scss
@@ -14,7 +14,8 @@ db-custom-select-list-item:not(:last-of-type) {
 }
 
 .db-custom-select-list-item {
-	display: flex;
+	@include db-display(flex);
+
 	block-size: 100%;
 	position: relative;
 	padding: variables.$db-spacing-fixed-sm;
