--- a/packages/components/src/components/tab-list/tab-list.scss
+++ b/packages/components/src/components/tab-list/tab-list.scss
@@ -8,8 +8,8 @@
 
 	> ul {
 		@extend %scrollbar;
+		@include db-display(flex);
 
-		display: flex;
 		gap: variables.$db-spacing-fixed-sm;
 		scroll-behavior: smooth;
 		padding: 0;
