--- a/packages/components/src/components/page/page.scss
+++ b/packages/components/src/components/page/page.scss
@@ -7,7 +7,8 @@
 
 @mixin header-footer-style {
 	> :is(.db-header, .db-footer, header, footer) {
-		display: flex;
+		@include db-display(flex);
+
 		flex: 0 1 auto;
 		flex-grow: 0;
 		flex-shrink: 0;
@@ -33,7 +34,9 @@
 
 		block-size: 100%;
 		min-block-size: 100%;
-		display: flex;
+
+		@include db-display(flex);
+
 		flex-direction: column;
 
 		/* workaround for angular */
@@ -42,7 +45,8 @@
 		}
 
 		> .db-main {
-			display: flex;
+			@include db-display(flex);
+
 			flex-direction: column;
 			overflow: auto;
 			flex: 1 1 auto;
