--- a/packages/components/src/components/popover/popover.scss
+++ b/packages/components/src/components/popover/popover.scss
@@ -5,7 +5,7 @@
 .db-popover {
 	position: relative;
 
-	@include db-display(flex);
+	@include display(flex);
 
 	block-size: fit-content;
 	inline-size: fit-content;
