--- a/packages/components/src/components/switch/switch.scss
+++ b/packages/components/src/components/switch/switch.scss
@@ -58,7 +58,7 @@ $checked-active-transition-size: calc(
 		block-size: form-components.$font-size-height;
 		box-sizing: content-box;
 
-		@include db-display(flex);
+		@include display(flex);
 
 		align-items: center;
 		/* stylelint-disable-next-line db-ux/use-spacings */
