--- a/packages/components/src/components/accordion-item/accordion-item.scss
+++ b/packages/components/src/components/accordion-item/accordion-item.scss
@@ -50,7 +50,7 @@
 			background-color: colors.$db-adaptive-bg-basic-level-1-default;
 			list-style: none;
 
-			@include db-display(flex);
+			@include display(flex);
 
 			justify-content: space-between;
 			padding: variables.$db-spacing-fixed-md;
