--- a/packages/components/src/components/brand/brand.scss
+++ b/packages/components/src/components/brand/brand.scss
@@ -4,7 +4,7 @@
 
 .db-brand {
 	@extend %db-overwrite-font-size-md;
-	@include db-display(flex);
+	@include display(flex);
 
 	gap: variables.$db-spacing-fixed-sm;
 	align-items: center;
