--- a/packages/components/src/components/custom-select-dropdown/custom-select-dropdown.scss
+++ b/packages/components/src/components/custom-select-dropdown/custom-select-dropdown.scss
@@ -64,7 +64,7 @@
 			@include helpers.divider("top", "after");
 
 			@include screen-sizes.screen("sm") {
-				@include db-display(none);
+				@include display(none);
 			}
 		}
 	}
