--- a/packages/components/src/components/infotext/infotext.scss
+++ b/packages/components/src/components/infotext/infotext.scss
@@ -8,7 +8,7 @@
 	--db-icon-margin-end: #{variables.$db-spacing-fixed-2xs};
 
 	@extend %db-overwrite-font-size-sm;
-	@include db-display(flex);
+	@include display(flex);
 
 	@include icons.has-no-icon {
 		@include icons.to-filled-icon;
