--- a/packages/components/src/components/tab-item/tab-item.scss
+++ b/packages/components/src/components/tab-item/tab-item.scss
@@ -14,7 +14,7 @@ $with-icon-padding-calc: calc(
 .db-tab-item {
 	position: relative;
 
-	@include db-display(inline-flex);
+	@include display(inline-flex);
 
 	list-style-type: "";
 	border-radius: variables.$db-border-radius-sm;
@@ -28,7 +28,7 @@ $with-icon-padding-calc: calc(
 		padding: variables.$db-spacing-fixed-xs;
 		align-items: center;
 
-		@include db-display(inline-block);
+		@include display(inline-block);
 
 		white-space: nowrap;
 		border: 0;
