--- a/packages/components/src/components/tab-list/tab-list.scss
+++ b/packages/components/src/components/tab-list/tab-list.scss
@@ -8,7 +8,7 @@
 
 	> ul {
 		@extend %scrollbar;
-		@include db-display(flex);
+		@include display(flex);
 
 		gap: variables.$db-spacing-fixed-sm;
 		scroll-behavior: smooth;
