--- a/packages/components/src/styles/internal/_button-components.scss
+++ b/packages/components/src/styles/internal/_button-components.scss
@@ -3,7 +3,9 @@
 	white-space: nowrap; // we don't want to break buttons
 	justify-content: center;
 	text-align: center;
-	display: inline-flex;
+
+	@include display(inline-flex);
+
 	align-items: center; // Centering the content vertically and horizontally
 	vertical-align: top; // Alignment of inline-flex buttons with different content
 }
