--- a/showcases/patternhub/styles/globals.scss
+++ b/showcases/patternhub/styles/globals.scss
@@ -52,11 +52,11 @@ iframe {
 }
 
 .iframe-component-container {
-	display: flex;
+	@include display(flex);
 	flex-direction: column;
 
 	.flex {
-		display: flex;
+		@include display(flex);
 		gap: variables.$db-spacing-fixed-sm;
 
 		&[data-variant="column"] {
@@ -66,7 +66,7 @@ iframe {
 }
 
 .base-64-container {
-	display: grid;
+	@include display(grid);
 	padding: variables.$db-spacing-fixed-md;
 	gap: variables.$db-spacing-fixed-md;
 
@@ -77,7 +77,7 @@ iframe {
 
 .noh1 {
 	h1 {
-		display: none;
+		@include display(none);
 	}
 }
 
@@ -87,7 +87,7 @@ iframe {
 
 	h1,
 	h2 {
-		display: none;
+		@include display(none);
 	}
 }
 
@@ -142,7 +142,7 @@ div[class^="ch-"] {
 %grid-container {
 	--columns: 1;
 
-	display: grid;
+	@include display(grid);
 	grid-template-columns: repeat(var(--columns), minmax(0, 1fr));
 	gap: variables.$db-spacing-fixed-md;
 
@@ -205,7 +205,7 @@ div[class^="ch-"] {
 
 	> div {
 		position: relative;
-		display: flex;
+		@include display(flex);
 		justify-content: center;
 		align-items: center;
 		border: 1px solid colors.$db-adaptive-on-bg-basic-emphasis-60-default;
@@ -221,7 +221,7 @@ div[class^="ch-"] {
 }
 
 .color-overview-switches {
-	display: flex;
+	@include display(flex);
 	gap: variables.$db-spacing-fixed-lg;
 	margin-block-end: variables.$db-spacing-fixed-md;
 }
@@ -229,7 +229,7 @@ div[class^="ch-"] {
 // density examples
 
 .density-example-grid {
-	display: grid;
+	@include display(grid);
 	grid-template-columns: repeat(3, minmax(0, 1fr));
 	gap: variables.$db-spacing-fixed-md;
 
@@ -239,18 +239,18 @@ div[class^="ch-"] {
 }
 
 .density-example-page {
-	display: flex;
+	@include display(flex);
 	flex-direction: column;
 	gap: variables.$db-spacing-fixed-md;
 
 	.density-example-page-regular {
-		display: grid;
+		@include display(grid);
 		grid-template-columns: repeat(3, minmax(0, 1fr));
 		gap: variables.$db-spacing-fixed-md;
 	}
 
 	.density-example-page-functional {
-		display: grid;
+		@include display(grid);
 		grid-template-columns: repeat(5, minmax(0, 1fr));
 		gap: variables.$db-spacing-fixed-md;
 	}
@@ -269,14 +269,14 @@ div[class^="ch-"] {
 		color: colors.$db-successful-on-bg-inverted-default;
 		border-color: colors.$db-successful-bg-inverted-contrast-high-default;
 		block-size: 100%;
-		display: flex;
+		@include display(flex);
 		justify-content: center;
 		position: absolute;
 		align-items: center;
 	}
 
 	.example-item {
-		display: flex;
+		@include display(flex);
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
@@ -287,7 +287,7 @@ div[class^="ch-"] {
 			border: 1px solid black;
 
 			> div {
-				display: flex;
+				@include display(flex);
 				border: 1px solid
 					colors.$db-adaptive-on-bg-basic-emphasis-60-default;
 				position: relative;
@@ -344,7 +344,7 @@ div[class^="ch-"] {
 
 		.example-sizing {
 			> div {
-				display: flex;
+				@include display(flex);
 				gap: variables.$db-spacing-fixed-md;
 			}
 
@@ -365,7 +365,7 @@ div[class^="ch-"] {
 .color-modes-container {
 	padding: variables.$db-spacing-fixed-md;
 	border: 1px dashed colors.$db-adaptive-on-bg-basic-emphasis-100-default;
-	display: grid;
+	@include display(grid);
 	gap: variables.$db-spacing-fixed-md;
 	grid-template-columns: repeat(2, minmax(0, 1fr));
 
@@ -383,7 +383,7 @@ div[class^="ch-"] {
 
 	.color-cards {
 		grid-column: span 2 / span 2;
-		display: grid;
+		@include display(grid);
 		gap: variables.$db-spacing-fixed-md;
 		grid-template-columns: repeat(5, minmax(0, 1fr));
 	}
@@ -400,7 +400,7 @@ h4,
 h5,
 h6 {
 	a:is(.header-link) {
-		display: inline-block;
+		@include display(inline-block);
 		margin-block: auto;
 		margin-inline-start: variables.$db-spacing-fixed-xs;
 		visibility: hidden;
@@ -427,7 +427,7 @@ h6 {
 	position: relative;
 
 	.code-details {
-		display: flex;
+		@include display(flex);
 
 		&[open] {
 			inset-inline-start: 0;
@@ -470,12 +470,12 @@ h6 {
 			z-index: 20;
 			inset: 0;
 			margin: variables.$db-spacing-fixed-md;
-			display: flex;
+			@include display(flex);
 			flex-direction: column;
 			gap: variables.$db-spacing-fixed-sm;
 
 			code {
-				display: block;
+				@include display(block);
 				white-space: pre-wrap;
 			}
 
@@ -498,19 +498,19 @@ h6 {
 }
 
 .validity-container {
-	display: grid;
+	@include display(grid);
 	grid-template-columns: repeat(2, minmax(0, 1fr));
 	gap: variables.$db-spacing-fixed-sm;
 
 	form {
-		display: flex;
+		@include display(flex);
 		flex-direction: column;
 		gap: variables.$db-spacing-fixed-sm;
 	}
 }
 
 .link-containers {
-	display: grid;
+	@include display(grid);
 	grid-template-areas:
 		"previous previous"
 		"next next";
@@ -551,7 +551,7 @@ h6 {
 }
 
 .breadcrumb-container {
-	display: flex;
+	@include display(flex);
 	overflow-x: auto;
 	overflow-inline: auto;
 	align-content: center;
@@ -572,7 +572,7 @@ h6 {
 }
 
 .card-navigation {
-	display: grid;
+	@include display(grid);
 	grid-template-columns: repeat(2, minmax(0, 1fr));
 	gap: variables.$db-spacing-fixed-md;
 
@@ -585,7 +585,7 @@ h6 {
 	}
 
 	.db-card {
-		display: grid;
+		@include display(grid);
 		grid-template-areas: "index icon" "label icon";
 
 		small {
