--- a/packages/components/src/components/drawer/drawer.scss
+++ b/packages/components/src/components/drawer/drawer.scss
@@ -1,5 +1,6 @@
 @use "sass:map";
 @use "@db-ux/core-foundations/build/styles/variables";
+@use "../../styles/internal/display";
 @use "@db-ux/core-foundations/build/styles/helpers";
 @use "@db-ux/core-foundations/build/styles/animation";
 @use "@db-ux/core-foundations/build/styles/colors";
@@ -125,7 +126,7 @@ $spacings: (
 	.db-drawer-container {
 		@extend %direction-right;
 		@extend %spacing-drawer;
-		@include display(flex);
+		@include display.display(flex);
 
 		flex-direction: column;
 		background-color: colors.$db-adaptive-bg-basic-level-1-default;
@@ -179,7 +180,7 @@ $spacings: (
 		}
 
 		.db-drawer-header {
-			@include display(none);
+			@include display.display(none);
 			@include helpers.divider("bottom");
 
 			.db-drawer-header-text {
@@ -198,7 +199,7 @@ $spacings: (
 
 			&:has(.button-close-drawer),
 			&:has(:not(.db-drawer-header-text:empty)) {
-				@include display(flex);
+				@include display.display(flex);
 			}
 		}
 	}
@@ -212,7 +213,7 @@ $spacings: (
 		background-color: transparent;
 
 		&[open] {
-			@include display(flex);
+			@include display.display(flex);
 		}
 
 		&:not([data-direction]),
