--- a/showcases/patternhub/styles/playgrounds.scss
+++ b/showcases/patternhub/styles/playgrounds.scss
@@ -1,7 +1,8 @@
 @use "@db-ux/core-foundations/build/styles/variables";
+@use "../../styles/internal/display";
 
 section.playground {
-	@include display(grid);
+	@include display.display(grid);
 	grid-template-columns: repeat(2, 1fr); /* Two columns */
 	gap: variables.$db-spacing-fixed-md; /* Optional spacing between items */
 
@@ -13,7 +14,7 @@ section.playground {
 		text-decoration: none;
 
 		strong {
-			@include display(block);
+			@include display.display(block);
 		}
 
 		img {
