--- a/packages/components/src/components/accordion-item/accordion-item.scss
+++ b/packages/components/src/components/accordion-item/accordion-item.scss
@@ -3,6 +3,7 @@
 @use "@db-ux/core-foundations/build/styles/colors";
 @use "@db-ux/core-foundations/build/styles/animation";
 @use "../../styles/internal/form-components";
+@use "../../styles/internal/display";
 @use "../../styles/internal/component";
 
 .db-accordion-item {
@@ -50,7 +51,7 @@
 			background-color: colors.$db-adaptive-bg-basic-level-1-default;
 			list-style: none;
 
-			@include display(flex);
+			@include display.display(flex);
 
 			justify-content: space-between;
 			padding: variables.$db-spacing-fixed-md;
