--- a/packages/components/src/components/brand/brand.scss
+++ b/packages/components/src/components/brand/brand.scss
@@ -1,10 +1,11 @@
 @use "@db-ux/core-foundations/build/styles/variables";
 @use "@db-ux/core-foundations/build/styles/colors";
 @use "@db-ux/core-foundations/build/styles/fonts";
+@use "../../styles/internal/display";
 
 .db-brand {
 	@extend %db-overwrite-font-size-md;
-	@include display(flex);
+	@include display.display(flex);
 
 	gap: variables.$db-spacing-fixed-sm;
 	align-items: center;
