--- a/packages/components/src/components/checkbox/checkbox.scss
+++ b/packages/components/src/components/checkbox/checkbox.scss
@@ -5,6 +5,7 @@
 @use "@db-ux/core-foundations/build/styles/helpers";
 @use "../../styles/internal/component";
 @use "../../styles/internal/form-components";
+@use "../../styles/internal/display";
 
 %center-icon {
 	&::before {
@@ -94,7 +95,7 @@
 	}
 
 	input {
-		@include display(flex);
+		@include display.display(flex);
 
 		border-radius: variables.$db-border-radius-2xs;
 		align-items: center;
