--- a/packages/components/src/components/custom-select-dropdown/custom-select-dropdown.scss
+++ b/packages/components/src/components/custom-select-dropdown/custom-select-dropdown.scss
@@ -1,4 +1,5 @@
 @use "@db-ux/core-foundations/build/styles/variables";
+@use "../../styles/internal/display";
 @use "@db-ux/core-foundations/build/styles/colors";
 @use "@db-ux/core-foundations/build/styles/screen-sizes";
 @use "@db-ux/core-foundations/build/styles/helpers";
@@ -64,7 +65,7 @@
 			@include helpers.divider("top", "after");
 
 			@include screen-sizes.screen("sm") {
-				@include display(none);
+				@include display.display(none);
 			}
 		}
 	}
