--- a/packages/components/src/components/custom-select/custom-select.scss
+++ b/packages/components/src/components/custom-select/custom-select.scss
@@ -3,6 +3,7 @@
 @use "@db-ux/core-foundations/build/styles/helpers";
 @use "@db-ux/core-foundations/build/styles/screen-sizes";
 @use "../../styles/internal/form-components";
+@use "../../styles/internal/display";
 @use "../../styles/internal/component";
 @use "../../styles/internal/select-components";
 @use "../../styles/dialog-init";
@@ -57,7 +58,7 @@
 
 	&:has(summary span) {
 		[id$="-placeholder"] {
-			@include display(none);
+			@include display.display(none);
 		}
 	}
 
