--- a/packages/components/src/components/icon/icon.scss
+++ b/packages/components/src/components/icon/icon.scss
@@ -1,11 +1,12 @@
 @use "@db-ux/core-foundations/build/styles/icons";
+@use "../../styles/internal/display";
 
 .db-icon {
 	@include icons.is-icon-text-replace;
 
 	/* Safari hack */
 	@supports (-webkit-hyphens: none) {
-		@include display(inline-block);
+		@include display.display(inline-block);
 
 		&::before {
 			block-size: auto;
