--- a/packages/components/src/components/navigation/navigation.scss
+++ b/packages/components/src/components/navigation/navigation.scss
@@ -1,6 +1,7 @@
 @use "@db-ux/core-foundations/build/styles/variables";
 @use "@db-ux/core-foundations/build/styles/screen-sizes";
 @use "../../styles/internal/component";
+@use "../../styles/internal/display";
 @use "../../styles/internal/form-components";
 @use "../../styles/internal/db-puls";
 
@@ -14,7 +15,7 @@
 	}
 
 	> menu {
-		@include display(flex);
+		@include display.display(flex);
 
 		flex-direction: column;
 		padding: 0;
@@ -101,7 +102,7 @@
 	&[data-force-close="true"] {
 		> menu menu {
 			@include screen-sizes.screen("md") {
-				@include display(none);
+				@include display.display(none);
 			}
 		}
 	}
