--- a/packages/components/src/components/notification/notification-grid-non-overlay.scss
+++ b/packages/components/src/components/notification/notification-grid-non-overlay.scss
@@ -1,6 +1,8 @@
+@use "../../styles/internal/display";
+
 %grid-layout-variant-not-overlay {
 	span {
-		@include display(none);
+		@include display.display(none);
 	}
 
 	// has link
