--- a/packages/components/src/components/page/page.scss
+++ b/packages/components/src/components/page/page.scss
@@ -1,4 +1,5 @@
 @use "@db-ux/core-foundations/build/styles/variables";
+@use "../../styles/internal/display";
 
 .db-page-document {
 	block-size: 100%;
@@ -7,7 +8,7 @@
 
 @mixin header-footer-style {
 	> :is(.db-header, .db-footer, header, footer) {
-		@include display(flex);
+		@include display.display(flex);
 
 		flex: 0 1 auto;
 		flex-grow: 0;
@@ -35,7 +36,7 @@
 		block-size: 100%;
 		min-block-size: 100%;
 
-		@include display(flex);
+		@include display.display(flex);
 
 		flex-direction: column;
 
@@ -45,7 +46,7 @@
 		}
 
 		> .db-main {
-			@include display(flex);
+			@include display.display(flex);
 
 			flex-direction: column;
 			overflow: auto;
