--- a/packages/components/src/styles/internal/_button-components.scss
+++ b/packages/components/src/styles/internal/_button-components.scss
@@ -1,10 +1,12 @@
+@use "../internal/display";
+
 %default-button {
 	font-weight: 700;
 	white-space: nowrap; // we don't want to break buttons
 	justify-content: center;
 	text-align: center;
 
-	@include display(inline-flex);
+	@include display.display(inline-flex);
 
 	align-items: center; // Centering the content vertically and horizontally
 	vertical-align: top; // Alignment of inline-flex buttons with different content
