--- a/packages/foundations/scss/defaults/default-icons.scss
+++ b/packages/foundations/scss/defaults/default-icons.scss
@@ -1,10 +1,11 @@
 @use "../icons";
+@use "../helpers/display";
 
 [data-icon],
 [data-icon-leading],
 [data-icon-trailing] {
 	&:is(span) {
-		@include display(inline-flex);
+		@include display.display(inline-flex);
 
 		vertical-align: baseline;
 	}
