--- a/showcases/patternhub/styles/decision-tree.scss
+++ b/showcases/patternhub/styles/decision-tree.scss
@@ -1,7 +1,8 @@
 @use "@db-ux/core-foundations/build/styles/variables";
+@use "../../styles/internal/display";
 
 .decision-tree {
-	@include display(flex);
+	@include display.display(flex);
 	flex-direction: column;
 	gap: variables.$db-spacing-fixed-3xl;
 	text-align: center;
@@ -21,7 +22,7 @@
 }
 
 .decision-tree-row {
-	@include display(grid);
+	@include display.display(grid);
 	justify-content: center;
 	gap: variables.$db-spacing-fixed-md;
 
