--- a/packages/components/src/components/notification/notification-grid-non-overlay.scss
+++ b/packages/components/src/components/notification/notification-grid-non-overlay.scss
@@ -1,4 +1,4 @@
-@use "../../styles/internal/display";
+@use "@db-ux/core-foundations/build/styles/helpers/display";
 
 %grid-layout-variant-not-overlay {
 	span {
