--- a/packages/components/src/components/brand/brand.scss
+++ b/packages/components/src/components/brand/brand.scss
@@ -1,7 +1,7 @@
 @use "@db-ux/core-foundations/build/styles/variables";
 @use "@db-ux/core-foundations/build/styles/colors";
 @use "@db-ux/core-foundations/build/styles/fonts";
-@use "../../styles/internal/display";
+@use "@db-ux/core-foundations/build/styles/helpers/display";
 
 .db-brand {
 	@extend %db-overwrite-font-size-md;
