--- a/packages/components/src/components/custom-select-list-item/custom-select-list-item.scss
+++ b/packages/components/src/components/custom-select-list-item/custom-select-list-item.scss
@@ -1,5 +1,5 @@
 @use "@db-ux/core-foundations/build/styles/variables";
-@use "../../styles/internal/display";
+@use "@db-ux/core-foundations/build/styles/helpers/display";
 @use "@db-ux/core-foundations/build/styles/colors";
 @use "@db-ux/core-foundations/build/styles/helpers";
 @use "@db-ux/core-foundations/build/styles/fonts";
