--- a/packages/components/src/components/custom-select-list/custom-select-list.scss
+++ b/packages/components/src/components/custom-select-list/custom-select-list.scss
@@ -1,6 +1,6 @@
 @use "@db-ux/core-foundations/build/styles/variables";
 @use "../../styles/internal/form-components";
-@use "../../styles/internal/display";
+@use "@db-ux/core-foundations/build/styles/helpers/display";
 
 .db-custom-select-list {
 	all: unset;
