--- a/packages/components/src/components/header/header.scss
+++ b/packages/components/src/components/header/header.scss
@@ -4,7 +4,7 @@
 @use "@db-ux/core-foundations/build/styles/density";
 @use "@db-ux/core-foundations/build/styles/colors";
 @use "../../styles/internal/component";
-@use "../../styles/internal/display";
+@use "@db-ux/core-foundations/build/styles/helpers/display";
 
 .db-header {
 	background-color: colors.$db-adaptive-bg-basic-level-1-default;
