--- a/packages/components/src/components/icon/icon.scss
+++ b/packages/components/src/components/icon/icon.scss
@@ -1,5 +1,5 @@
 @use "@db-ux/core-foundations/build/styles/icons";
-@use "../../styles/internal/display";
+@use "@db-ux/core-foundations/build/styles/helpers/display";
 
 .db-icon {
 	@include icons.is-icon-text-replace;
