--- a/packages/components/src/components/navigation/navigation.scss
+++ b/packages/components/src/components/navigation/navigation.scss
@@ -1,7 +1,7 @@
 @use "@db-ux/core-foundations/build/styles/variables";
 @use "@db-ux/core-foundations/build/styles/screen-sizes";
 @use "../../styles/internal/component";
-@use "../../styles/internal/display";
+@use "@db-ux/core-foundations/build/styles/helpers/display";
 @use "../../styles/internal/form-components";
 @use "../../styles/internal/db-puls";
 
