--- a/packages/components/src/components/popover/popover.scss
+++ b/packages/components/src/components/popover/popover.scss
@@ -1,5 +1,5 @@
 @use "@db-ux/core-foundations/build/styles/variables";
-@use "../../styles/internal/display";
+@use "@db-ux/core-foundations/build/styles/helpers/display";
 @use "../../styles/internal/popover-component";
 @use "../../styles/internal/component";
 
