--- a/packages/components/src/components/tag/tag.scss
+++ b/packages/components/src/components/tag/tag.scss
@@ -9,7 +9,7 @@
 @use "../../styles/internal/tag-components";
 @use "../../styles/internal/icon-passing";
 @use "../../styles/internal/component";
-@use "../../styles/internal/display";
+@use "@db-ux/core-foundations/build/styles/helpers/display";
 
 %no-text {
 	&[data-no-text="true"] {
