--- a/packages/components/src/styles/internal/_link-components.scss
+++ b/packages/components/src/styles/internal/_link-components.scss
@@ -3,7 +3,7 @@
 @use "@db-ux/core-foundations/build/styles/colors";
 @use "@db-ux/core-foundations/build/styles/animation";
 @use "./component";
-@use "../../styles/internal/display";
+@use "@db-ux/core-foundations/build/styles/helpers/display";
 
 %db-link-height {
 	@include display.display(inline-block);
