--- a/showcases/patternhub/styles/decision-tree.scss
+++ b/showcases/patternhub/styles/decision-tree.scss
@@ -1,5 +1,5 @@
 @use "@db-ux/core-foundations/build/styles/variables";
-@use "../../styles/internal/display";
+@use "@db-ux/core-foundations/build/styles/helpers/display";
 
 .decision-tree {
 	@include display.display(flex);
