--- a/showcases/patternhub/styles/playgrounds.scss
+++ b/showcases/patternhub/styles/playgrounds.scss
@@ -1,5 +1,5 @@
 @use "@db-ux/core-foundations/build/styles/variables";
-@use "../../styles/internal/display";
+@use "@db-ux/core-foundations/build/styles/helpers/display";
 
 section.playground {
 	@include display.display(grid);
